fix(docker): run as node user

--- a/generator/template/Dockerfile
+++ b/generator/template/Dockerfile
@@ -2,8 +2,6 @@ FROM node:alpine
 
 EXPOSE 8080
 
-RUN apk add --no-cache nginx
-
 WORKDIR /usr/src/app
 
 RUN npm install serve -g
@@ -15,5 +13,7 @@ RUN npm install
 COPY . .
 
 RUN npm run build
+
+USER node
 
 CMD ["serve", "--single", "--port", "8080", "dist"]
