refactor(docker): Use multi stage build to lower docker image size

--- a/generator/template/Dockerfile
+++ b/generator/template/Dockerfile
@@ -1,19 +1,16 @@
-FROM node:alpine
-
-EXPOSE 8080
-
+# build static files
+FROM node:alpine as frontend
 WORKDIR /usr/src/app
-
-RUN npm install serve -g
-
-COPY package.json package-lock.json ./
-
-RUN npm install
-
+COPY package.json .
+RUN npm install --silent
 COPY . .
-
 RUN npm run build
 
+# final image
+FROM node:alpine
+EXPOSE 8080
+WORKDIR /usr/src/app
+RUN npm install serve -g
+COPY --from=frontend /usr/src/app/dist ./dist
 USER node
-
 CMD ["serve", "--single", "--port", "8080", "dist"]
