--- a/generator/template/Dockerfile
+++ b/generator/template/Dockerfile
@@ -11,6 +11,6 @@ FROM node:alpine
 EXPOSE 8080
 WORKDIR /usr/src/app
 RUN npm install serve -g
-COPY --from=frontend /usr/src/app/dist ./dist
+COPY --from=build /usr/src/app/dist ./dist
 USER node
 CMD ["serve", "--single", "--port", "8080", "dist"]
