fix(docker): copy package-lock.json

--- a/generator/template/Dockerfile
+++ b/generator/template/Dockerfile
@@ -1,7 +1,7 @@
 # build static files
 FROM node:alpine as build
 WORKDIR /usr/src/app
-COPY package.json .
+COPY package*.json ./
 RUN npm install --silent
 COPY . .
 RUN npm run build
