--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "main": "index.js",
   "scripts": {
     "commit": "git-cz",
-    "test": "jest --coverage",
-    "posttest": "standard",
-    "precommit": "npm test",
-    "commitmsg": "validate-commit-msg",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "test": "standard",
+    "precommit": "npm test"
   },
   "keywords": [
     "vue",
@@ -20,19 +17,16 @@
   ],
   "author": "René Herrmann <rene@herrmannplatz.de>",
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
-    "commitizen": "^2.9.6",
+    "commitizen": "^2.10.1",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^0.14.3",
-    "jest": "^21.2.1",
-    "semantic-release": "^8.2.0",
-    "standard": "^10.0.3",
-    "validate-commit-msg": "^2.14.0"
+    "semantic-release": "^15.9.9",
+    "standard": "^11.0.1"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com/herrmannplatz/vue-cli-plugin-docker.git"
+    "url": "git+https://github.com/herrmannplatz/vue-cli-plugin-docker.git"
   },
   "config": {
     "commitizen": {
