--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,5 @@
 language: node_js
-node_js:
-  - 8
-
-cache:
-  directories:
-    - "node_modules"
-
-before_script:
-  - npm prune
-
-after_success:
-  - npx semantic-release
-
+after_success: npx semantic-release
 branches:
   only:
     - master
