--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-cli-plugin-docker",
   "version": "0.0.0-semantic-release",
-  "description": "🐳 vue-cli 3.x plugin to serve your vue app using Docker",
+  "description": "🐳 Dockerize your vue app",
   "main": "index.js",
   "scripts": {
     "commit": "git-cz",
