--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "🐳 Dockerize your vue app",
   "main": "index.js",
   "scripts": {
-    "commit": "git-cz",
-    "test": "standard",
-    "precommit": "npm test"
+    "test": "standard"
   },
   "keywords": [
     "vue",
@@ -18,19 +16,11 @@
   "author": "René Herrmann <rene@herrmannplatz.de>",
   "license": "MIT",
   "devDependencies": {
-    "commitizen": "^3.0.7",
-    "cz-conventional-changelog": "^2.1.0",
-    "husky": "^3.0.0",
-    "semantic-release": "^16.0.0",
-    "standard": "^12.0.0"
+    "semantic-release": "^17.0.4",
+    "standard": "^14.3.1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/herrmannplatz/vue-cli-plugin-docker.git"
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
   }
 }
